[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "setuptools-scm>=8",
]

[project]
name = "yammbs"
description = "A tool for benchmarking force fields."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
scripts.yammbs_analyse_torsions = "yammbs.scripts.run_torsion_comparisons:main"

[tool.setuptools]
packages.find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 119
lint.select = [ "D", "E", "F", "I", "NPY", "RUF027", "UP", "W" ]
lint.ignore = [ "D105", "D107" ]
lint.preview = true

[tool.pytest]
ini_options.addopts = "--cov=yammbs/ --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage]
run.omit = [
  "yammbs/_tests/*",
]
report.exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
exclude = [
  "scripts/",
  "yammbs/_tests",
  "yammbs/scripts",
]
python_version = "3.12"
plugins = [ "pydantic.mypy", "sqlmypy" ]
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "openeye",
  "rdkit.Chem",
  "rdkit.Chem.Draw",
  "rdkit.Chem.rdMolAlign",
  "rdkit.Chem.rdmolops",
  "openff.toolkit.*",
  "openff.nagl.toolkits.openff",
  "espaloma",
  "openmm.*",
  "openmm.app",
  "openmm.unit",
  "openmmforcefields.generators",
  "sqlalchemy",
  "sqlalchemy.org",
  "qcelemental",
  "openff.qcsubmit.results",
  "MDAnalysis",
  "bokeh",
  "panel",
]
ignore_missing_imports = true

[tool.pixi]
dependencies.pip = "*"
dependencies.numpy = "2.2.*"
dependencies.setuptools_scm = "*"
dependencies.pydantic = "2.*"
dependencies.openff-toolkit-base = "0.18.*"
dependencies.openff-qcsubmit = "0.57.*"
dependencies.qcportal = "~=0.55"
dependencies.openeye-toolkits = "*"
dependencies.openmmforcefields = "*"
dependencies.rdkit = ">=2024,!=2024.03.6,!=2024.09.1"
dependencies.openmm = "8.4.*"
dependencies.MDAnalysis = "*"
# add back when merged https://github.com/openforcefield/smirnoff-plugins/pull/76
# smirnoff-plugins
# de-forcefields ~=1.0.3
dependencies.click = "*"
dependencies.scipy = "*"
dependencies.seaborn = "*"
dependencies.bokeh = "*"
dependencies.panel = "*"
environments.py311 = [ "py311", "test", "typing" ]
environments.py312 = [ "py312", "test", "typing" ]
environments.dev = [ "py312", "test", "typing", "dev" ]
feature.dev.dependencies.pre-commit = "*"
feature.dev.dependencies.ipython = "*"
feature.dev.dependencies.ipdb = "*"
feature.py311.dependencies.python = "3.11.*"
feature.py312.dependencies.python = "3.12.*"
feature.test.dependencies.pytest = "*"
feature.test.dependencies.pytest-cov = "*"
feature.test.dependencies.pytest-xdist = "*"
feature.test.dependencies.pytest-randomly = "*"
feature.test.dependencies.pytest-timeout = "*"
feature.typing.dependencies.mypy = "*"
feature.typing.dependencies.typing-extensions = "*"
feature.typing.dependencies.types-cffi = "*"
feature.typing.dependencies.types-click = "*"
feature.typing.dependencies.types-colorama = "*"
feature.typing.dependencies.types-docutils = "*"
feature.typing.dependencies.types-Pygments = "*"
feature.typing.dependencies.types-python-dateutil = "*"
feature.typing.dependencies.types-pytz = "*"
feature.typing.dependencies.types-pywin32 = "*"
feature.typing.dependencies.types-setuptools = "*"
feature.typing.dependencies.types-tqdm = "*"
feature.typing.dependencies.sqlalchemy-stubs = "*"
feature.typing.dependencies.pandas-stubs = "*"
feature.typing.dependencies.scipy-stubs = "*"
pypi-dependencies.yammbs = { path = ".", editable = true }
tasks.run_mypy = { cmd = "python -m mypy -p yammbs" }
tasks.run_tests = { cmd = "python -m pytest yammbs -x --durations=20 -n logical" }
workspace.channels = [ "conda-forge", "openeye" ]
workspace.platforms = [ "linux-64", "osx-arm64" ]
