[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "setuptools-scm>=8",
]

[project]
name = "yammbs"
description = "A tool for benchmarking force fields."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
scripts.yammbs_analyse_torsions = "yammbs.scripts.run_torsion_comparisons:main"

[tool.setuptools]
packages.find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
line-length = 119
lint.select = [ "D", "E", "F", "I", "NPY", "RUF027", "UP", "W" ]
lint.ignore = [ "D105", "D107" ]
lint.preview = true

[tool.mypy]
exclude = [
  "scripts/",
  "yammbs/_tests",
  "yammbs/scripts",
]
python_version = "3.12"
plugins = [ "pydantic.mypy", "sqlmypy" ]
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "openeye",
  "rdkit.Chem",
  "rdkit.Chem.Draw",
  "rdkit.Chem.rdMolAlign",
  "rdkit.Chem.rdmolops",
  "openff.toolkit.*",
  "openff.nagl.toolkits.openff",
  "espaloma",
  "openmm.*",
  "openmm.app",
  "openmm.unit",
  "openmmforcefields.generators",
  "sqlalchemy",
  "sqlalchemy.org",
  "qcelemental",
  "openff.qcsubmit.results",
  "MDAnalysis",
  "MDAnalysis.analysis.dihedrals",
  "bokeh",
  "panel",
]
ignore_missing_imports = true

[tool.pytest]
ini_options.addopts = "--cov=yammbs/ --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage]
run.omit = [
  "yammbs/_tests/*",
]
report.exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
