[metadata]
name = yammbs
version = 0.0.0
description = Internal benchmarking storage tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattwthompson/ib
author = Open Force Field Initiative
author_email = info@openforcefield.org
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
omit =
    yammbs/_tests/*
    versioneer.py
    setup.py
    yammbs/_version.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError

[flake8]
max-line-length = 119
ignore = E203
per-file-ignores =
    yammbs/__init__.py:F401

[isort]
profile = black

[versioneer]
VCS = git
style = pep440
versionfile_source = yammbs/_version.py
versionfile_build = yammbs/_version.py
tag_prefix = 'v'

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[mypy-openff.toolkit.*]
ignore_missing_imports = True

[mypy-openmm.*]
ignore_missing_imports = True

[mypy-openmm.app]
ignore_missing_imports = True

[mypy-openmm.unit]
ignore_missing_imports = True

[mypy-openmmforcefields.generators]
ignore_missing_imports = True

[mypy-espaloma]
ignore_missing_imports = True

[mypy-geometric.*]
ignore_missing_imports = True
