[metadata]
name = yammbs
version = 0.0.0
description = Internal benchmarking storage tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattwthompson/ib
author = Open Force Field Initiative
author_email = info@openforcefield.org
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
omit =
    yammbs/_tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError

[flake8]
max-line-length = 119
ignore = E203
per-file-ignores =
    yammbs/__init__.py:F401

[isort]
profile = black

[mypy]
plugins = pydantic.mypy,sqlmypy
warn_unused_configs = True
warn_unused_ignores = True
warn_incomplete_stub = True
show_error_codes = True
exclude = yammbs/_tests/

[mypy-openeye]
ignore_missing_imports = True

[mypy-rdkit.Chem]
ignore_missing_imports = True

[mypy-openff.toolkit.*]
ignore_missing_imports = True

[mypy-openff.nagl.toolkits.openff]
ignore_missing_imports = True

[mypy-espaloma]
ignore_missing_imports = True

[mypy-openmm.*]
ignore_missing_imports = True

[mypy-openmm.app]
ignore_missing_imports = True

[mypy-openmm.unit]
ignore_missing_imports = True

[mypy-openmmforcefields.generators]
ignore_missing_imports = True

[mypy-sqlalchemy]
ignore_missing_imports = True

[mypy-sqlalchemy.orm]
ignore_missing_imports = True

[mypy-geometric.*]
ignore_missing_imports = True

[mypy-qcelemental]
ignore_missing_imports = True

[mypy-openff.qcsubmit.results]
ignore_missing_imports = True
