[metadata]
name = ibstore
version = 0.0.0
description = Internal benchmarking storage tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattwthompson/ib
author = Open Force Field Initiative
author_email = info@openforcefield.org
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options.packages.find]
exclude =
    tests*
    testing*

[coverage:run]
omit =
    */_version.py
    */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError

[flake8]
max-line-length = 119
ignore = E203

[isort]
profile = black

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
